--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+# Pro Starts
+MyPythonVirtualEnvironments/myenv1
+# Pro Ends
